Fix artifact name format in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}_nightly
+          name: ${{ github.event.repository.name }}-nightly
           path: |
             *
             !*.git*
